@@ -2,6 +2,7 @@
 
 - Periodically flush HTTP server and HTTP client logs.
 - Fix HTTP client to preserve User-Agent when following redirects.
+- Make following redirects configurable for HTTP client.
 
 0.170
 
